test/depLhs1_2.slq

def foo(const x:đť”ą,const y:đť”ą,w:đť”ą,t:đť”ą)mfree{
	wâŠ•=xÂ·y;
	tâŠ•=xÂ·y;
	return (w,t);
}

def main(){
	x:=H(0);
	y:=H(0);
	z:=H(0);
	foo(x,y,w,t):=dup(z,z); /// error
	if wÂ·t{ phase(Ď€); }
	__show(__query("dep",w));
	__show(__query("dep",t));
	return (x,y,z);
}
